--- a/css/style.css
+++ b/css/style.css
@@ -142,11 +142,18 @@ ol {
   transition: all 0.2s;
 }
 
+.btn-container {
+  display: flex;
+  margin-top: -60px; /* moves it upward */
+  margin-bottom: 40px; /* gives space below */
+  margin-left: 520px;
+}
+
 .btn-main {
   color: #fff;
   background-color: #00a3c8;
   border-color: #00a3c8;
-  padding: 15px 40px;
+  padding: 20px 40px;
   border-radius: 50px;
   transition: all 0.3s;
 }
@@ -157,7 +164,6 @@ ol {
   color: #fff;
   transition: all 0.3s;
 }
-
 .card-one {
   border: solid 1px rgba(0, 163, 200, 0.4);
   padding: 20px;
@@ -166,6 +172,7 @@ ol {
   transition: all 0.3s;
   cursor: pointer;
   height: 100%;
+  
 }
 
 .card-one:hover {
@@ -524,4 +531,31 @@ section.footer {
   vertical-align: middle;
   margin-right: 6px;
   font-size: 20px;
+}
+.book-btn {
+  display: inline-flex;
+  align-items: center;
+  padding: 10px 20px;
+  background-color: #00a3c8; 
+  color: #ffffff; /* Dark teal text */
+  border-radius: 9999px; /* Full pill shape */
+  font-family: 'Inter', sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  cursor: pointer;
+  border: none;
+  transition: box-shadow 0.2s ease;
+  box-shadow: 0px 4px 8px rgba(0, 225, 255, 0.05);
+  margin-left: 530px;
+}
+
+.book-btn:hover {
+  box-shadow: 0px 6px 12px #7c7b7b;
+}
+
+.book-btn svg {
+  margin-left: 10px;
+  width: 18px;
+  height: 18px;
+  stroke: #012f34;
 }
